task-2/task2-kubernetes/java-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
  labels:
    app: java-app
    tier: front-bak

spec:
  template:
    metadata:
      name: java-app-pods
      labels:
        app: java-app
        tier: front-bak
    spec:
      containers:
        name: java-app-container
        image: abishekluitel/simplejavawebapp:latest

  replicas: 2
  selector:
    withLabels:
      app: java-app
      tier: front-bak
...
