task-2/task2-kubernetes/java-app-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
spec:
  rules:
  - host: "example.com"
    http:
      paths:
       - pathType: Prefix
         path: "/"
         backend:
          service:
            name: java-app-service
            port:
              number: 8080

  - host: "*.example.com"
    http:
      paths:
       - pathType: Prefix
         path: "/"
         backend:
          service:
            name: java-app-service
            port:
              number: 8080
...
